--- a/index.html
+++ b/index.html
@@ -1,45 +1,143 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Maycon Oficial</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #0f172a;
-            color: #e5e7eb;
-            text-align: center;
-            padding: 40px;
-        }
-        h1 {
-            font-size: 2.2em;
-        }
-        p {
-            max-width: 600px;
-            margin: 20px auto;
-            line-height: 1.6;
-        }
-        .box {
-            margin-top: 40px;
-            padding: 20px;
-            background: #111827;
-            border-radius: 10px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>MichaelTek</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #0f172a;
+    color: #e5e7eb;
+}
+
+header {
+    background: #020617;
+    padding: 20px;
+    text-align: center;
+}
+
+nav {
+    margin-top: 10px;
+}
+
+nav a {
+    color: #93c5fd;
+    margin: 0 10px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+main {
+    padding: 40px 20px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+h1, h2 {
+    margin-bottom: 10px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.card {
+    background: #020617;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.card a {
+    color: #38bdf8;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer {
+    background: #020617;
+    padding: 30px 20px;
+    margin-top: 60px;
+}
+
+.social a {
+    display: inline-block;
+    margin: 8px 12px 0 0;
+    color: #93c5fd;
+    text-decoration: none;
+    font-weight: bold;
+}
+</style>
 </head>
+
 <body>
 
-    <h1>Maycon William</h1>
-    <p>
-        Bem-vindo ao meu site oficial.  
-        Aqui eu publico projetos, ideias e conteúdos sobre tecnologia.
-    </p>
+<header>
+    <h1>MichaelTek</h1>
+    <p>Conhecimento, tecnologia e aprendizado contínuo</p>
 
-    <div class="box">
-        <p>🚧 Conteúdo em construção</p>
-        <p>Em breve: projetos, vídeos e downloads.</p>
+    <nav>
+        <a href="index.html">Início</a>
+        <a href="tutoriais.html">Tutoriais</a>
+        <a href="arduino.html">Arduino & Robótica</a>
+        <a href="games.html">Games</a>
+        <a href="livros.html">Livros & Textos</a>
+        <a href="contato.html">Contato</a>
+    </nav>
+</header>
+
+<main>
+    <div class="grid">
+
+        <div class="card">
+            <h2>📘 Tutoriais</h2>
+            <p>Guias práticos sobre tecnologia e informática.</p>
+            <a href="tutoriais.html">Acessar →</a>
+        </div>
+
+        <div class="card">
+            <h2>⚙️ Arduino & Robótica</h2>
+            <p>Projetos, códigos e eletrônica aplicada.</p>
+            <a href="arduino.html">Ver projetos →</a>
+        </div>
+
+        <div class="card">
+            <h2>🎮 Games</h2>
+            <p>Games, curiosidades e cultura digital.</p>
+            <a href="games.html">Explorar →</a>
+        </div>
+
+        <div class="card">
+            <h2>📚 Livros & Textos</h2>
+            <p>Leituras, reflexões e conteúdos educativos.</p>
+            <a href="livros.html">Ler →</a>
+        </div>
+
     </div>
+</main>
+
+<footer>
+    <h2>Contato</h2>
+    <p>Me encontre nas redes ou entre em contato profissional:</p>
+
+    <p>📧 Email: <strong>seuemail@email.com</strong></p>
+
+    <div class="social">
+        <a href="#" target="_blank">▶️ YouTube</a>
+        <a href="#" target="_blank">🎵 TikTok</a>
+        <a href="#" target="_blank">📸 Instagram</a>
+        <a href="#" target="_blank">💻 GitHub</a>
+    </div>
+</footer>
 
 </body>
 </html>
