--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ footer {
 <body>
 
 <header>
-    <h1>MichaelTek</h1>
+    <h1>Technologic MW</h1>
     <p>Conhecimento, tecnologia e aprendizado contínuo</p>
 
     <nav>
