--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ footer {
     <h2>Contato</h2>
     <p>Me encontre nas redes ou entre em contato profissional:</p>
 
-    <p>📧 Email: <strong>seuemail@email.com</strong></p>
+    <p>📧 Email: <strong>maycon.50@gmail.com</strong></p>
 
     <div class="social">
-        <a href="#" target="_blank">▶️ YouTube</a>
+        <a href="https://www.youtube.com/channel/UCyaSAGItKcIMmhQ_y1uu19A" target="_blank">▶️ YouTube</a>
         <a href="#" target="_blank">🎵 TikTok</a>
         <a href="#" target="_blank">📸 Instagram</a>
         <a href="#" target="_blank">💻 GitHub</a>
